# my_scripts

./: .gitignore  .secrets_template.toml  README.md  pyproject.toml  reinstall.xsh
my_scripts/: base.py
my_scripts/scripts/: psquash.py
my_scripts/wip_scripts/: yi_rename.py
ptools/: base.py  config.py  utils.py
ptools/scripts/: plaunch.py  psquash.py  ptools_info.py  yi_rename.py
ptools/settings_templates/: .secrets.toml  settings.toml
ptools/wip_scripts/: yi_rename.py
