[tool.poetry]
    name = "my_scripts"
    version = "0.1.8"
    description = ""
    authors = ["Pedro Batista <pedrovhb@gmail.com>"]

[tool.poetry.scripts]
    psquash = 'my_scripts.scripts.psquash:PSquash.run'

[tool.poetry.dependencies]
    python = "^3.8"
    fire = "^0.4.0"
    httpx = "^0.18.2"
    toolz = "^0.11.1"
    rich = "^10.6.0"
    dynaconf = "^3.1.4"

[tool.poetry.dev-dependencies]
    isort = "^5.9.2"
    black = "^21.7b0"

[tool.isort]
    profile = "black"

[build-system]
    requires = ["poetry-core>=1.0.0"]
    build-backend = "poetry.core.masonry.api"
