[tool.poetry]
    name = "ptools"
    version = "0.1.9"
    description = ""
    authors = ["Pedro Batista <pedrovhb@gmail.com>"]

[tool.poetry.scripts]
    psquash = 'ptools.scripts.psquash:PSquash.run'
    plaunch = 'ptools.scripts.plaunch:PLaunch.run'
    ptools = 'ptools.scripts:ptools.PTools.run'

[tool.poetry.dependencies]
    python = "^3.8"
    fire = "^0.4.0"
    httpx = "^0.18.2"
    toolz = "^0.11.1"
    rich = "^10.6.0"
    dynaconf = "^3.1.4"
    appdirs = "^1.4.4"
    mypy = "^0.910"

[tool.poetry.dev-dependencies]
    isort = "^5.9.2"
    black = "^21.7b0"

[tool.isort]
    profile = "black"

[build-system]
    requires = ["poetry-core>=1.0.0"]
    build-backend = "poetry.core.masonry.api"
